--- a/style.css
+++ b/style.css
@@ -2,3 +2,49 @@ p{
 color: rgb(190, 77, 77);
 
 }
+body{
+    background-color: aqua;
+}
+header{
+    position:sticky;
+    background-color: brown;
+   top: 0;
+   left: 0;
+   padding: 20px;
+   width: 100%;
+    text-align: center;
+    text-decoration-color:blueviolet;
+    z-index: 1;
+    
+    
+}
+header h1{
+   
+    color: white;
+    border: 8px solid white;
+    padding: 6px 12px;
+    display: inline-block;
+    border-radius: 36px;
+}
+
+section .banner{
+color: #000;
+}
+footer{
+    position:relative ;
+    background-color:rgb(255, 0, 98);
+    text-decoration-color: aqua;
+    text-align:center;
+    padding-bottom: 0%;
+    padding-right: 0%;
+    font-size: small;
+}
+footer .h2{
+   
+    border-color:aqua;
+}
+form input:focus{
+    border:4px dashed royalblue;
+    outline: none;
+
+}
